--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,6 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+/TextSerialization.sln.ide
+AppDomainCallbackExtensions.sln.ide/edb.chk
+/AppDomainCallbackExtensions.sln.ide
