--- a/AppDomainCallbackExtensions/AppDomainCallbackExtensions.csproj
+++ b/AppDomainCallbackExtensions/AppDomainCallbackExtensions.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>0cc63079</NuGetPackageImportStamp>
+    <StyleCopTreatErrorsAsWarnings>false</StyleCopTreatErrorsAsWarnings>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -26,7 +28,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NET20</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -37,18 +39,59 @@
     <AssemblyOriginatorKeyFile>AppDomainCallbackExtensions.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AbstractCrossAppDomainDelegateCallback.cs" />
+    <Compile Include="AbstractCrossAppDomainFuncCallback.cs" />
     <Compile Include="AppDomainExtensions.cs" />
-    <Compile Include="CrossAppDomainDelegate.cs" />
+    <Compile Include="CrossAppDomainActionCallback.generic6.cs" />
+    <Compile Include="CrossAppDomainActionCallback.generic5.cs" />
+    <Compile Include="CrossAppDomainActionCallback.generic4.cs" />
+    <Compile Include="CrossAppDomainActionCallback.generic3.cs" />
+    <Compile Include="CrossAppDomainActionCallback.generic2.cs" />
+    <Compile Include="CrossAppDomainActionCallback.generic1.cs" />
+    <Compile Include="CrossAppDomainFuncCallback.generic1.cs" />
+    <Compile Include="CrossAppDomainFuncCallback.generic7.cs" />
+    <Compile Include="CrossAppDomainFuncCallback.generic6.cs" />
+    <Compile Include="CrossAppDomainFuncCallback.generic5.cs" />
+    <Compile Include="CrossAppDomainFuncCallback.generic4.cs" />
+    <Compile Include="CrossAppDomainFuncCallback.generic3.cs" />
+    <Compile Include="CrossAppDomainFuncCallback.generic2.cs" />
+    <Compile Include="CrossDomainId.cs" />
+    <Compile Include="System\Action.generic6.cs" />
+    <Compile Include="System\Action.generic5.cs" />
+    <Compile Include="System\Action.generic4.cs" />
+    <Compile Include="System\Action.generic3.cs" />
+    <Compile Include="System\Action.generic2.cs" />
+    <Compile Include="System\Func.generic1.cs" />
+    <Compile Include="System\Func.generic3.cs" />
+    <Compile Include="System\Func.generic7.cs" />
+    <Compile Include="System\Func.generic6.cs" />
+    <Compile Include="System\Func.generic5.cs" />
+    <Compile Include="System\Func.generic4.cs" />
+    <Compile Include="System\Func.generic2.cs" />
+    <Compile Include="ICrossAppDomainCallback.cs" />
+    <Compile Include="ICrossAppDomainCallback.generic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
+    <Reference Include="TextSerialization, Version=1.0.0.0, Culture=neutral, PublicKeyToken=048350c573d540a5, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\TextSerialization.1.0.0\lib\net20\TextSerialization.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="AppDomainCallbackExtensions.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
