--- a/AppDomainCallbackExtensions.nuspec
+++ b/AppDomainCallbackExtensions.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>AppDomainCallbackExtensions</id>
-        <version>1.0.0</version>
+        <version>1.0.2</version>
         <authors>Jeremy Beavon</authors>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Provides extension methods for AppDomain.DoCallBack that allows data to be passed back and forth between AppDomains.</description>
@@ -12,6 +12,7 @@
     </metadata>
     <files>
         <file src="AppDomainCallbackExtensions\bin\Release\AppDomainCallbackExtensions.dll" target="lib\net20\AppDomainCallbackExtensions.dll" />
+        <file src="AppDomainCallbackExtensions.Net30\bin\Release\AppDomainCallbackExtensions.dll" target="lib\net30\AppDomainCallbackExtensions.dll" />
         <file src="AppDomainCallbackExtensions.Net35\bin\Release\AppDomainCallbackExtensions.dll" target="lib\net35\AppDomainCallbackExtensions.dll" />
         <file src="AppDomainCallbackExtensions.Net40\bin\Release\AppDomainCallbackExtensions.dll" target="lib\net40\AppDomainCallbackExtensions.dll" />
     </files>
