--- a/AppDomainCallbackExtensions.Net35/AppDomainCallbackExtensions.Net35.csproj
+++ b/AppDomainCallbackExtensions.Net35/AppDomainCallbackExtensions.Net35.csproj
@@ -55,6 +55,9 @@
     <Compile Include="..\AppDomainCallbackExtensions\AppDomainExtensions.cs">
       <Link>AppDomainExtensions.cs</Link>
     </Compile>
+    <Compile Include="..\AppDomainCallbackExtensions\AssemblyResolver.cs">
+      <Link>AssemblyResolver.cs</Link>
+    </Compile>
     <Compile Include="..\AppDomainCallbackExtensions\CrossAppDomainActionCallback.generic1.cs">
       <Link>CrossAppDomainActionCallback.generic1.cs</Link>
     </Compile>
